--- a/.github/workflows/release_branches.yml
+++ b/.github/workflows/release_branches.yml
@@ -465,6 +465,7 @@ jobs:
     steps:
       - name: Set envs
         run: |
+          REPORTS_PATH=${{runner.temp}}/reports_dir
           cat >> "$GITHUB_ENV" << 'EOF'
           EOF
       - name: Clear repository
@@ -472,6 +473,10 @@ jobs:
           sudo rm -fr "$GITHUB_WORKSPACE" && mkdir "$GITHUB_WORKSPACE"
       - name: Check out repository code
         uses: actions/checkout@v2
+      - name: Download json reports
+        uses: actions/download-artifact@v2
+        with:
+          path: ${{ env.REPORTS_PATH }}
       - name: Sign release
         env:
           GPG_BINARY_SIGNING_KEY: ${{ secrets.GPG_BINARY_SIGNING_KEY }}
