Scheduled CI/CD run on 00:00 every Saturday

--- a/.github/workflows/release_branches.yml
+++ b/.github/workflows/release_branches.yml
@@ -18,6 +18,8 @@ on: # yamllint disable-line rule:truthy
   push:
     branches:
       - 'releases/22.3*'
+  schedule:
+    - cron: '0 0 * * 6'
 
 jobs:
   DockerHubPushAarch64:
